# rustedbytes-counterlines

./: CHANGELOG.md  Cargo.toml  LICENSE  METRICS_USAGE.md  README.md  RELEASE_NOTES_v0.2.2.md  REQUIREMENTS.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  config.toml  counter.rs  error.rs  example-languages.toml  language.rs  main.rs  output.rs  processor.rs  report.rs
